; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/dma/extr_fsldma.c_set_desc_cnt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/dma/extr_fsldma.c_set_desc_cnt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsl_dma_chan = type { i32 }
%struct.fsl_dma_ld_hw = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fsl_dma_chan*, %struct.fsl_dma_ld_hw*, i32)* @set_desc_cnt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_desc_cnt(%struct.fsl_dma_chan* %0, %struct.fsl_dma_ld_hw* %1, i32 %2) #0 {
  %4 = alloca %struct.fsl_dma_chan*, align 8
  %5 = alloca %struct.fsl_dma_ld_hw*, align 8
  %6 = alloca i32, align 4
  store %struct.fsl_dma_chan* %0, %struct.fsl_dma_chan** %4, align 8
  store %struct.fsl_dma_ld_hw* %1, %struct.fsl_dma_ld_hw** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.fsl_dma_chan*, %struct.fsl_dma_chan** %4, align 8
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @CPU_TO_DMA(%struct.fsl_dma_chan* %7, i32 %8, i32 32)
  %10 = load %struct.fsl_dma_ld_hw*, %struct.fsl_dma_ld_hw** %5, align 8
  %11 = getelementptr inbounds %struct.fsl_dma_ld_hw, %struct.fsl_dma_ld_hw* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  ret void
}

declare dso_local i32 @CPU_TO_DMA(%struct.fsl_dma_chan*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
